# 3DReconstruction

./: 3DReconstruction.sln  3DReconstruction_VC2015.sln  3DReconstruction_VS2015.vcxproj  README.md  instructions.txt
3DReconstruction/: 3DReconstruction.cpp  3DReconstruction.vcxproj.filters  3DReconstruction_VS2015.vcxproj  CMakeLists.txt  Thumbs.db
_Refactor/dataset/foot/: Thumbs.db
_Refactor/dataset/presentation_dataset/: Thumbs.db
_Refactor/dataset/presentation_dataset - Copy/: Thumbs.db  statue.pcd
_Refactor/generateData/VS2015/: VS2015.sln
_Refactor/generateData/include/: 3DReconstruction.hpp
calibrateGrayScale/: CMakeLists.txt  main.cpp
data/buda_statue/: param.txt~
data/buddha_statue/: param.txt
data/face/: face3dpointcloud.pcd
dataset/foot/: Thumbs.db  foot.pcd  foot_inliers.pcd  parameters.txt
dataset/kettle/: parameters.txt
dataset/presentation_dataset/: Thumbs.db  presentation_result.pcd
dataset/statue/: statue_inliers.pcd
generateData/VS2012/: VS2012.sln
generateData/src/: main.cpp
getStripes/: CMakeLists.txt  getStripes.cpp
labComputer/3DReconstruction/: 3DReconstruction.cpp  3DReconstruction.sln  3DReconstruction.vcxproj  Thumbs.db  stdafx.cpp
morphological/: CMakeLists.txt  morphological.cpp
processData/VS2012/: VS2012.sln
processData/VS2015/: VS2015.sln
processData/include/: 3DReconstruction.hpp
readPcl/: CMakeLists.txt  readPCD.cpp
results/: kettle.pcd
src/: CMakeLists.txt  generateStripes.m  getPointCloud.m  getStripes.m  main.cpp
statistical_removal/: statistical_removal.cpp
(+50 files in other folders)
